fix: now pack covers in the table are displayed correctly feat: the ability to add a cover when creating a pack is complete

--- a/src/features/modals/basicPackModal/inputTypeFileCover/InputTypeFileCover.module.css
+++ b/src/features/modals/basicPackModal/inputTypeFileCover/InputTypeFileCover.module.css
@@ -28,5 +28,5 @@
 }
 
 .cover {
-  width: 400px;
+  width: 100%;
 }
